css/style.css
body {
  font-family: "Poppins", sans-serif;
  height: 100vh;
}

.hero-name {
  font-size: clamp(40px, 7vw, 200px);
}

.hero-text {
  font-size: clamp(15px, 2vw, 50px);
}

.footer-links {
  margin: 0 0 20px 0;
  padding: 0;
}

.footer-links li {
  margin-left: 10px;
  margin-right: 10px;
  display: inline-block;
}

.footer-links li a {
  color: rgba(255, 255, 255, 0.5);
  text-align: center;
  text-decoration: none;
  transition: 0.1s;
}

.footer-links li a:hover {
  color: rgba(255, 255, 255, 1);
}

.price {
  font-size: 16px;
  color: darkslategray;
}

.background-img {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("../images/hero-image.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

.about-img {
  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
    url("../images/hero-image.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

.about-name {
  font-size: clamp(40px, 4vw, 200px);
}

.about-descript {
  font-size: clamp(18px, 2vw, 32px);
}

.about-icon {
  height: clamp(100px, 20vw, 200px);
  width: clamp(100px, 20vw, 200px);
}

